--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -152,7 +152,25 @@
                 android:resource="@xml/riskassesment_method_sync_adapter" />
         </service>
 
+        <!-- benim risk Assesment procedure Procedure Sync Provider & Servicelerim  // -->
+        <provider
+            android:name="com.odoo.addons.Risk.providers.RiskAsessment_procedure_SyncProvider"
+            android:authorities="@string/sync_label_Riskassesment_procedure_authority"
+            android:label="@string/sync_label_Riskassesment_procedure"
+            android:multiprocess="true" />
 
+        <service
+            android:name="com.odoo.addons.Risk.services.RiskAsessment_procedure_SyncService"
+            android:exported="true"
+            android:process=":sync_risk">
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/riskassesment_procedure_sync_adapter" />
+        </service>
 
 
         <!-- benim Sync Provider & Servicelerim  // -->
